force-app/main/default/objects/Group__c.object
<CustomObject>
    <fields>
        <fullName>Academic_Year__c</fullName>
        <formula>IF(
   TEXT(Group_Type__c)=&quot;School Group&quot;, 
   Current_Academic_Year__c, 
   IF(
      AND(
          MONTH(DATEVALUE(CreatedDate))&lt;=12, 
          MONTH(DATEVALUE(CreatedDate))&gt;=8
          ), 
      TEXT(YEAR(DATEVALUE(CreatedDate)))&amp;&quot;/&quot;&amp; TEXT(CreatedDate_plus_1__c ),  
      TEXT(CreatedDate_minus_1__c)&amp;&quot;/&quot;&amp;TEXT(YEAR(DATEVALUE(CreatedDate)))
      )
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Academic Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Registrations__c</fullName>
        <label>Active Registrations</label>
        <summaryFilterItems>
            <field>Registration__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Registration__c.Group__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>Teacher</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>Headteacher / of Admin / of Finance</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Student_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assessments__c</fullName>
        <label># Assessments</label>
        <summaryForeignKey>Assesment__c.Group__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Auto_Add_Parents_To_Group__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>to automatically add parents to chatter group.</inlineHelpText>
        <label>Auto Add Parents To Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campus__c</fullName>
        <formula>IF(TEXT(Owner:User.Campus__c) = &quot;Cross-Campus&quot;, &quot;Unknown&quot;,

IF(TEXT(Owner:User.Campus__c) &lt;&gt; &quot;&quot;, TEXT(Owner:User.Campus__c),

&quot;N/A&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chatter_Group_Id__c</fullName>
        <inlineHelpText>System Field : Corresponding Chatter Group Id for this Student Group.</inlineHelpText>
        <label>Chatter Group Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Identifier__c</fullName>
        <description>Used to define the name of a student group (standard naming convention)</description>
        <label>Class Identifier</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Name__c</fullName>
        <formula>IF( TEXT(Combined_Year_Group__c)=&quot;&quot;, TEXT(Year_Group__c) &amp; TEXT(Class__c) ,TEXT(Year_Group__c)&amp;&quot;/&quot;&amp; Combined_Year_Group_Abb__c  &amp; TEXT(Class__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Class Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Combined_Year_Group_Abb__c</fullName>
        <description>The shortened abbreviation of the &apos;Year Group (Highest)&apos; field (e.g. NO letter G or Y before the number). Used in the official group name in registers etc. for tutor groups with a value in the &apos;Year Group (Highest)&apos; field.</description>
        <formula>CASE(TEXT(Combined_Year_Group__c), 
&quot;Pre-Nursery&quot;,&quot;PN&quot;, 
&quot;Nursery&quot;,&quot;N&quot;, 
&quot;Reception&quot;,&quot;R&quot;, 
&quot;Pre-Kindergarten&quot;,&quot;PK&quot;, 
&quot;Kindergarten&quot;,&quot;K&quot;, 
&quot;Year 10&quot;,&quot;10&quot;, 
&quot;Year 11&quot;,&quot;11&quot;, 
&quot;Year 12&quot;,&quot;12&quot;, 
&quot;Year 13&quot;,&quot;13&quot;, 
&quot;Grade 10&quot;,&quot;10&quot;, 
&quot;Grade 11&quot;,&quot;11&quot;, 
&quot;Grade 12&quot;,&quot;12&quot;, 
RIGHT(TEXT(Combined_Year_Group__c), 1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Combined Year Group (Abb.)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Combined_Year_Group_Full_Abb__c</fullName>
        <description>The full abbreviation of the &apos;Year Group (Highest)&apos; field (e.g. letter G or Y AND number). Currently only used to check data via connector/reports and has no application in logic.</description>
        <formula>CASE(TEXT(Combined_Year_Group__c),
&quot;Pre-Nursery&quot;,&quot;PN&quot;,
&quot;Nursery&quot;,&quot;N&quot;,
&quot;Reception&quot;,&quot;R&quot;,
&quot;Pre-Kindergarten&quot;,&quot;PK&quot;,
&quot;Kindergarten&quot;,&quot;K&quot;,
&quot;Year 10&quot;,&quot;Y10&quot;,
&quot;Year 11&quot;,&quot;Y11&quot;,
&quot;Year 12&quot;,&quot;Y12&quot;,
&quot;Year 13&quot;,&quot;Y13&quot;,
&quot;Grade 10&quot;,&quot;G10&quot;,
&quot;Grade 11&quot;,&quot;G11&quot;,
&quot;Grade 12&quot;,&quot;G12&quot;,
LEFT(TEXT(Combined_Year_Group__c), 1)&amp;RIGHT(TEXT(Combined_Year_Group__c), 1))</formula>
        <label>Combined Year Group (Full Abb.)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Combined_Year_Group__c</fullName>
        <inlineHelpText>The highest Year Group / Grade of any student within the group. Only required if there are students from multiple Year Groups / Grades in the group and must be higher than the &apos;Year Group (Lowest)&apos; field.</inlineHelpText>
        <label>Year Group (Highest - if different)</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Year_Group_Control__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-Nursery</fullName>
                </value>
                <value>
                    <fullName>Nursery</fullName>
                </value>
                <value>
                    <fullName>Reception</fullName>
                </value>
                <value>
                    <fullName>Year 1</fullName>
                </value>
                <value>
                    <fullName>Year 2</fullName>
                </value>
                <value>
                    <fullName>Year 3</fullName>
                </value>
                <value>
                    <fullName>Year 4</fullName>
                </value>
                <value>
                    <fullName>Year 5</fullName>
                </value>
                <value>
                    <fullName>Year 6</fullName>
                </value>
                <value>
                    <fullName>Year 7</fullName>
                </value>
                <value>
                    <fullName>Year 8</fullName>
                </value>
                <value>
                    <fullName>Year 9</fullName>
                </value>
                <value>
                    <fullName>Year 10</fullName>
                </value>
                <value>
                    <fullName>Year 11</fullName>
                </value>
                <value>
                    <fullName>Year 12</fullName>
                </value>
                <value>
                    <fullName>Year 13</fullName>
                </value>
                <value>
                    <fullName>Pre-Kindergarten</fullName>
                </value>
                <value>
                    <fullName>Kindergarten</fullName>
                </value>
                <value>
                    <fullName>Grade 1</fullName>
                </value>
                <value>
                    <fullName>Grade 2</fullName>
                </value>
                <value>
                    <fullName>Grade 3</fullName>
                </value>
                <value>
                    <fullName>Grade 4</fullName>
                </value>
                <value>
                    <fullName>Grade 5</fullName>
                </value>
                <value>
                    <fullName>Grade 6</fullName>
                </value>
                <value>
                    <fullName>Grade 7</fullName>
                </value>
                <value>
                    <fullName>Grade 8</fullName>
                </value>
                <value>
                    <fullName>Grade 9</fullName>
                </value>
                <value>
                    <fullName>Grade 10</fullName>
                </value>
                <value>
                    <fullName>Grade 11</fullName>
                </value>
                <value>
                    <fullName>Grade 12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CopyName__c</fullName>
        <label>CopyName</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Group_Name__c</fullName>
        <formula>Group_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Group Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Subject__c</fullName>
        <description>Identifies when a subject is considered a core subject for the purpose of filtering the relevant reports</description>
        <formula>OR(TEXT(Subject_Name__c) = &quot;English&quot;, TEXT(Subject_Name__c) = &quot;Literacy&quot;, TEXT(Subject_Name__c) = &quot;Mathematics&quot;, TEXT(Subject_Name__c) = &quot;Reading&quot;, TEXT(Subject_Name__c) = &quot;Science&quot;, TEXT(Subject_Name__c) = &quot;Writing&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Core Subject</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CreatedDate_minus_1__c</fullName>
        <formula>YEAR(DATEVALUE(CreatedDate ))-1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedDate-1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CreatedDate_plus_1__c</fullName>
        <formula>YEAR(DATEVALUE(CreatedDate ))+1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedDate+1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Academic_Year__c</fullName>
        <formula>IF(
   MONTH(TODAY()) &gt;= 8,
   TEXT(YEAR(TODAY()))&amp;&quot;/&quot;&amp;TEXT( Current_Year_Plus_1__c),
   TEXT(Current_Year_Minus_1__c)&amp;&quot;/&quot;&amp;TEXT(YEAR(TODAY()))
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Academic Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Year_Minus_1__c</fullName>
        <formula>YEAR(TODAY())-1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Year Minus 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Year_Plus_1__c</fullName>
        <formula>YEAR(TODAY())+1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Year Plus 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deletion_Prevention__c</fullName>
        <formula>AND(
    School__c = &quot;The British International School of Kuala Lumpur&quot;,
    TEXT(Group_Type__c) = &quot;Tutor Group&quot;
    )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deletion Prevention</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Used to define the name of a student group (standard naming convention)</description>
        <inlineHelpText>Usually not required. Add any text here that you want to append to the standard group name.</inlineHelpText>
        <label>Group Name Extension</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID_18_Char__c</fullName>
        <description>The ID of the record in the alternate SFDC org, where applicable.</description>
        <externalId>true</externalId>
        <label>External ID (18 Char)</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>First_Day_of_Group_s_Academic_Year__c</fullName>
        <description>Required so that &apos;THIS FISCAL YEAR&apos; can be used in manual register creation reports to ensure they only show student groups from the correct academic year</description>
        <formula>DATE(VALUE(LEFT(Academic_Year__c, 4)), 08, 01)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Day of Group&apos;s Academic Year</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Folder_Type__c</fullName>
        <label>Folder Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                    <default>true</default>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>Subject</fullName>
                </value>
                <value>
                    <fullName>Module</fullName>
                </value>
                <value>
                    <fullName>Topic</fullName>
                </value>
                <value>
                    <fullName>Sub-Group</fullName>
                </value>
                <value>
                    <fullName>General Docs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group_ID__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <formula>IF( TEXT(Group_Type__c) =&quot;Tutor Group&quot;,

(IF( TEXT(Combined_Year_Group__c) =&quot;&quot;,

 TEXT(Year_Group__c)&amp;&quot; &quot;&amp;  Owner:User.Alias,
 TEXT(Year_Group__c) &amp;&quot;-&quot;&amp; Combined_Year_Group_Abb__c&amp;&quot; &quot;&amp; Owner:User.Alias  )),IF(TEXT(Group_Type__c) == &apos;School Group&apos;,&apos;&apos;, TEXT(Subject_Name__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Owner__c</fullName>
        <formula>Owner:User.FirstName &amp;&quot; &quot;&amp; Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Type__c</fullName>
        <label>Group Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Year_Group_Control__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Tutor Group</fullName>
                </value>
                <value>
                    <fullName>Subject</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>School Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_Related_Blog__c</fullName>
        <formula>IF(
   NOT(ISBLANK(Chatter_Group_Id__c)),
   &quot;Yes - &quot;&amp; HYPERLINK(&quot;https://naeportal.force.com/parents/_ui/core/chatter/groups/GroupProfilePage?g=&quot;&amp;Chatter_Group_Id__c, &quot;Click to View&quot;, &quot;_blank&quot;),
   &quot;No&quot;
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>You must have already clicked switched in and out of the parent portal in this login session in order for the link to the related blog to work</inlineHelpText>
        <label>Has Related Blog?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsApprover__c</fullName>
        <formula>IF($User.Username= Approver__r.Username,&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsApprover</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsOwner__c</fullName>
        <formula>IF($User.Username= Owner:User.Username,&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsOwner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Folder_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Folder Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Secondary_School_Group__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to identify a &apos;School Group&apos; for the secondary department. Registrations belonging to this group DO NOT need to be deactivated at the end of the academic year and the group can be used each year, similar to the &apos;Whole School&apos; group.</description>
        <label>Is Secondary School Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_This_Academic_Year_Group__c</fullName>
        <formula>IF(Current_Academic_Year__c = Academic_Year__c, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is This Academic Year Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Valid__c</fullName>
        <description>Check if Group is valid on basis of academic year</description>
        <formula>Academic_Year__c == Current_Academic_Year__c</formula>
        <inlineHelpText>Check if Group is valid on basis of academic year</inlineHelpText>
        <label>Is Valid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Whole_School_Group__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the group is the &apos;Whole School&apos; school group for the relevant school</description>
        <label>Is Whole School Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mass_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mass Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Email__c</fullName>
        <formula>Owner:User.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Section__c</fullName>
        <description>Used to define the name of a student group (standard naming convention)</description>
        <label>School Section</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Whole School</fullName>
                </value>
                <value>
                    <fullName>Primary School</fullName>
                </value>
                <value>
                    <fullName>Secondary School</fullName>
                </value>
                <value>
                    <fullName>Pre-School</fullName>
                </value>
                <value>
                    <fullName>Elementary School</fullName>
                </value>
                <value>
                    <fullName>Middle School</fullName>
                </value>
                <value>
                    <fullName>High School</fullName>
                </value>
                <value>
                    <fullName>Lower Primary</fullName>
                </value>
                <value>
                    <fullName>Upper Primary</fullName>
                </value>
                <value>
                    <fullName>EYFS</fullName>
                </value>
                <value>
                    <fullName>Key Stage 1</fullName>
                </value>
                <value>
                    <fullName>Key Stage 2</fullName>
                </value>
                <value>
                    <fullName>Key Stage 3</fullName>
                </value>
                <value>
                    <fullName>Key Stage 4</fullName>
                </value>
                <value>
                    <fullName>Key Stage 5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <formula>TEXT(Owner:User.School__c)</formula>
        <label>School</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Set__c</fullName>
        <description>Used to define the name of a student group (standard naming convention)</description>
        <label>Set</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date_Last_Week__c</fullName>
        <description>Calculates the date of the first day (Monday) of the previous week</description>
        <formula>CASE(MOD(TODAY() - DATE(2014, 9, 1), 7), 
0, TODAY()-7, 
1, TODAY()-8, 
2, TODAY()-9, 
3, TODAY()-10, 
4, TODAY()-11, 
5, TODAY()-12, 
TODAY()-13)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date Last Week</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date_Next_Academic_Year__c</fullName>
        <formula>if(Month(Today()) &gt;= 8, DATE( YEAR( DATEVALUE( NOW() ) )+1 , 8 , 1 ), 
DATE( YEAR( DATEVALUE( NOW() ) ), 8 , 1 ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date Next Academic Year</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date_This_Academic_Year__c</fullName>
        <formula>if(Month(Today()) &gt;= 8, DATE( YEAR( DATEVALUE( NOW() ) ) , 8 , 1 ), 
                        DATE( YEAR( DATEVALUE( NOW() ) )-1 , 8 , 1 ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date This Academic Year</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subject_Name_Internal__c</fullName>
        <label>Subject Name (Internal)</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject_Name_Short__c</fullName>
        <description>A shortened version of the subject name for use in timetabling names and some reports</description>
        <formula>LOWER(CASE(TEXT(Subject_Name__c), &quot;Computing&quot;, &quot;com&quot;, &quot;Computer Science&quot;, &quot;csc&quot;, &quot;Mathematics - Statistics&quot;, &quot;mst&quot;, LEFT(TEXT(Subject_Name__c), 3)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subject Name (Short)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject_Name__c</fullName>
        <inlineHelpText>as visible in portal</inlineHelpText>
        <label>Subject Name</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Group_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Art &amp; Design</fullName>
                </value>
                <value>
                    <fullName>Bahasa</fullName>
                </value>
                <value>
                    <fullName>Biology</fullName>
                </value>
                <value>
                    <fullName>Business Studies</fullName>
                </value>
                <value>
                    <fullName>Chemistry</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Computing</fullName>
                </value>
                <value>
                    <fullName>Computer Science</fullName>
                </value>
                <value>
                    <fullName>Dance</fullName>
                </value>
                <value>
                    <fullName>Drama</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>EAL</fullName>
                </value>
                <value>
                    <fullName>Economics</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Extended Project</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>Geography</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Graphic Design</fullName>
                </value>
                <value>
                    <fullName>History</fullName>
                </value>
                <value>
                    <fullName>Humanities</fullName>
                </value>
                <value>
                    <fullName>ICT</fullName>
                </value>
                <value>
                    <fullName>Integrated Curriculum</fullName>
                </value>
                <value>
                    <fullName>Learning Support</fullName>
                </value>
                <value>
                    <fullName>Literacy</fullName>
                </value>
                <value>
                    <fullName>Mathematics</fullName>
                </value>
                <value>
                    <fullName>Mathematics - Statistics</fullName>
                </value>
                <value>
                    <fullName>Media Studies</fullName>
                </value>
                <value>
                    <fullName>Music</fullName>
                </value>
                <value>
                    <fullName>Myanmar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Teacher_Initials__c</fullName>
        <formula>Owner:User.Alias</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Teacher Initials</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Search__c</fullName>
        <externalId>true</externalId>
        <label>Test Search</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>This_Academic_Year__c</fullName>
        <formula>IF( Academic_Year__c = Current_Academic_Year__c,&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>This Academic Year?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_Group_Control__c</fullName>
        <description>Set by means of a workflow rule to control the year group options available based on the school being a US school such as NYIS and also the group type i.e. a tutor group</description>
        <label>Year Group Control</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tutor Group UK</fullName>
                </value>
                <value>
                    <fullName>Tutor Group US</fullName>
                </value>
                <value>
                    <fullName>Non-Tutor Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Year_Group_Full_Abb__c</fullName>
        <description>The full abbreviation of the &apos;Year Group (Lowest)&apos; field (e.g. letter G or Y AND number). Currently only used to check data via connector/reports and has no application in logic.</description>
        <formula>CASE(TEXT(Year_Group__c), 
&quot;Pre-Nursery&quot;,&quot;PN&quot;, 
&quot;Nursery&quot;,&quot;N&quot;, 
&quot;Reception&quot;,&quot;R&quot;, 
&quot;Pre-Kindergarten&quot;,&quot;PK&quot;, 
&quot;Kindergarten&quot;,&quot;K&quot;, 
&quot;Year 10&quot;,&quot;Y10&quot;,
&quot;Year 11&quot;,&quot;Y11&quot;,
&quot;Year 12&quot;,&quot;Y12&quot;,
&quot;Year 13&quot;,&quot;Y13&quot;,
&quot;Grade 10&quot;,&quot;G10&quot;,
&quot;Grade 11&quot;,&quot;G11&quot;,
&quot;Grade 12&quot;,&quot;G12&quot;, 
LEFT(TEXT(Year_Group__c), 1)&amp;RIGHT(TEXT(Year_Group__c), 1))</formula>
        <label>Year Group (Full Abb.)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_Group_Highest_Position_Score__c</fullName>
        <description>Used in a validation rule to ensure that the &apos;Year Group (Highest - if any)&apos; field is not the same as or less than the &apos;Year Group (Lowest)&apos; field.</description>
        <formula>IF(
   ISPICKVAL(Combined_Year_Group__c, &quot;Pre-Nursery&quot;), 
   0.2,
   IF(
      ISPICKVAL(Combined_Year_Group__c, &quot;Nursery&quot;), 
      0.4,
      IF(
         OR(
            ISPICKVAL(Combined_Year_Group__c, &quot;Reception&quot;), 
            ISPICKVAL(Combined_Year_Group__c, &quot;Pre-Kindergarten&quot;)
            ),
         0.6,
         IF(
            ISPICKVAL(Combined_Year_Group__c, &quot;Kindergarten&quot;), 
            0.8,
            IF(
               OR(
                  ISPICKVAL(Combined_Year_Group__c, &quot;Year 10&quot;), 
                  ISPICKVAL(Combined_Year_Group__c, &quot;Grade 10&quot;)
                  ),
               10.0,
               IF(
                  OR(
                     ISPICKVAL(Combined_Year_Group__c, &quot;Year 11&quot;), 
                     ISPICKVAL(Combined_Year_Group__c, &quot;Grade 11&quot;)
                     ),
                  11.0,
                  IF(
                     OR(
                        ISPICKVAL(Combined_Year_Group__c, &quot;Year 12&quot;), 
                        ISPICKVAL(Combined_Year_Group__c, &quot;Grade 12&quot;)
                        ),
                     12.0,
                     IF(
                        ISPICKVAL(Combined_Year_Group__c, &quot;Year 13&quot;), 
                        13.0,
                        VALUE(RIGHT(TEXT(Combined_Year_Group__c), 1))
                        )
                     )
                  )
               )
            )
         )
      )
   )</formula>
        <label>Year Group (Highest) Position Score</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
</CustomObject>